# colone-pilot

./: .gitattributes  .gitignore  GITHUB-INTEGRATION.md  IDE-CONFIGURATION.md  LICENSE  README.md  SECURITY.md  checksums.json  checksums.txt  test-installation.ps1  test-installation.sh
linux/: .env.example  README.md  config.sh.example  docker-compose.gpu.yml  docker-compose.yml  setup-config.sh  setup.sh  start-backend.sh  test-installation.sh  update.sh
mcp-server/: README.md  pyproject.toml  server.py  test_mcp_connection.py
mcp-server/tools/: backend.py  config.py  health.py  logs.py  models.py
windows/: README.md  config.ps1.example  download-llama-cpp.ps1  download-models.ps1  install-autostart-dual.ps1  install-autostart.ps1  setup-config.ps1  setup-windows.ps1  start-backend-windows.ps1  start-dual-backend.ps1  stop-backend-windows.ps1  test-installation.ps1  uninstall-windows.ps1
